@@ -26,7 +26,10 @@
       </ul>
     </div>
     <div class="tabpanel" id="search-files" style="display:none;">
-      <p>Search by tag or title</p>
+      <label for="q" style="font-weight:bold;padding: 5px 0;">
+        Search by tag or title 
+        <img id="spinner" src="/images/spinner.gif" alt="spinner" style="display:none;vertical-align: middle" />
+      </label>
       <input class="searchbox" type="text" size="30" name="q" id="search-files-q" />
       <input type="button" value="Search" onclick="TinyTab.callbacks['search-files']($F('search-files-q'))" />
       <ul id="search-assets"></ul>
