@@ -1,5 +1,7 @@
 * SVN *
 
+* Added spinner graphic for asset searches from article page
+
 * Added link to the public homepage
 
 * Added spinner graphics for search request in assets area
